--- a/app_physiotherapy/templates/users/register.html
+++ b/app_physiotherapy/templates/users/register.html
@@ -5,10 +5,21 @@
         <h2>Cadastrar</h2>
         {% csrf_token %}
         <div class="d-flex align-items-center flex-column gap-1">
+            <div style="width: 100%;" class="d-flex align-items-start justify-content-start flex-column">
+                <div class="form-check">
+                    <input style="background-color: #00000041;" class="form-check-input" type="radio" name="tipo_de_usuario"value="paciente" checked>
+                    <label class="form-check-label" for="flexRadioDefault1">Paciente</label>
+                </div>
+                <div class="form-check">
+                    <input style="background-color: #00000041;" class="form-check-input" type="radio" name="tipo_de_usuario"value="profissional">
+                    <label class="form-check-label" for="flexRadioDefault2">Profissional</label>
+                </div>
+            </div>
+
             <input name="nome" type="text" placeholder="Nome" required />
+            <input name="email" type="email" placeholder="Email" required />
             <input name="idade" type="number" placeholder="Idade" required />
             <input name="senha" type="password" placeholder="Senha" required />
-
             <button class="btn btn-success">Cadastrar</button>
         </div>
     </form>
