--- a/app_physiotherapy/templates/users/page_patient.html
+++ b/app_physiotherapy/templates/users/page_patient.html
@@ -1,1 +1,47 @@
-<main>Paciente</main>
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+
+<body>
+    <header style="z-index: 1; width: 100%;" class=" position-fixed shadow p-3 mb-5 bg-body-tertiary rounded">
+        <nav class="navbar bg-body-tertiary" style="background-color: #e3f2fd;">
+            <a class="nav-link navbar-brand" href="{% url 'home' %}">Fisioterapia</a>
+            <img class="w-5" src="{% static 'iconfisioterapia/icon.png' %}" alt="">
+            <a class="nav-link navbar-brand" href="{% url 'create_schedule' %}">Agendamentos</a>
+        </nav>
+    </header>
+    <main class="" style="padding-top: 6rem; height: 100vh;">
+        <div class="container">
+            <div>
+                <h4 style=" margin-top: 5rem; text-align: center;">A fisioterapia é uma área da saúde que se dedica à prevenção,
+                    diagnóstico, tratamento e reabilitação de distúrbios do movimento e de funções do corpo humano. Ela utiliza
+                    diferentes métodos e técnicas para ajudar as pessoas a recuperar ou manter a sua capacidade física, aliviar
+                    dores, melhorar a mobilidade, e promover a saúde geral.</h4>
+            </div>
+            <ol   class="list-group list-group-numbered">
+                Algumas das principais aplicações da fisioterapia incluem:
+                <li class="list-group-item">Reabilitação de lesões</li>
+                <li class="list-group-item">Alívio da dor</li>
+                <li class="list-group-item">Melhoria da mobilidade e flexibilidade</li>
+                <li class="list-group-item">Prevenção de complicações</li>
+                <li class="list-group-item">Reabilitação neurológica</li>
+                <li class="list-group-item">Promoção da saúde e bem-estar</li>
+                <li class="list-group-item">Tratamento de condições respiratórias</li>
+            </ol>
+        </div>
+    </main>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+</html>
