--- a/app_physiotherapy/templates/users/home.html
+++ b/app_physiotherapy/templates/users/home.html
@@ -15,8 +15,8 @@
         <div style="height: 86.5vh;" class="carousel-item active">
             <img style="filter: brightness(30%);" src="{% static 'images/fisioterapia1slide.jpg' %}" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h5>Elevação da Perna Sobre uma Cilindro</h5>
+                <p>Este exercício é ótimo para ativar e fortalecer os músculos da parte inferior do corpo, além de melhorar o alinhamento e a postura.</p>
             </div>
         </div>
         <div style="height: 86.5vh;" class="carousel-item">
@@ -29,8 +29,8 @@
         <div style="height: 86.5vh;" class="carousel-item">
             <img style="filter: brightness(30%);" src="{% static 'images/fisioterapia3slide.jpg' %}" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h5>Flexão de Braços com Mãos Cruzadas no Peito</h5>
+                <p>Este exercício é muitas vezes utilizado para adaptar a intensidade da flexão de braços, oferecendo um desafio diferente e focando na técnica e controle muscular.</p>
             </div>
         </div>
     </div>
