--- a/app_physiotherapy/templates/users/create_schedule.html
+++ b/app_physiotherapy/templates/users/create_schedule.html
@@ -18,92 +18,38 @@
                 <a href="javascript:history.back()" class="link-light mb-3 d-block">
                     <i class="bi bi-arrow-left"></i> Voltar
                 </a>
-        
-                <form style="color: #fff;" action="{% url 'create_schedule' %}" method="POST" class="d-flex flex-column align-items-center gap-3">
-                    <h4 class="mb-4">Criar Agendamento</h4>
+
+                <form  method="post">
                     {% csrf_token %}
-        
-                    <div class=" w-100" style="max-width: 15rem;">
-                        <label for="paciente_name" class="form-label">Nome do paciente</label>
-                        <input type="text" id="paciente_name" name="paciente_name" class="form-control" placeholder="Nome do paciente" value="{{ users.name }}" readonly required>
+                
+                    <div class="form-group">
+                        <label for="id_name">Nome:</label>
+                        {{ form.name }}  <!-- Campo de entrada do nome -->
+                    </div>
+                         
+                    <div class="form-group">
+                        <label for="id_age">Idade:</label>
+                        {{ form.age }}  <!-- Campo de entrada da idade -->
+                    </div>
+                
+                    <div class="form-group">
+                        <label for="id_date">Data:</label>
+                        {{ form.date }}  <!-- Campo de entrada da data -->
+                    </div>
+                
+                    <div class="form-group">
+                        <label for="id_hourly">Hora:</label>
+                        {{ form.hourly }}  <!-- Campo de entrada da hora -->
+                    </div>
+                
+                    <div class="form-group">
+                        <label for="id_doctor">Médico:</label>
+                        {{ form.doctor }}  <!-- Campo de seleção de médicos -->
                     </div>
 
-                    <div class=" w-100" style="max-width: 15rem;">
-                        <label for="age" class="form-label">Idade</label>
-                        <input type="number" name="age" class="form-control" placeholder="Idade do paciente" value="{{ users.age }}" readonly required>
-                    </div>
-        
-                    <div class=" w-100" style="max-width: 15rem;">
-                        <label for="appointment_date" class="form-label">Data da Consulta</label>
-                        <input type="date" id="appointment_date" name="data" class="form-control" required>
-                    </div>
-        
-                    <div class=" w-100" style="max-width: 15rem;">
-                        <label for="appointment_time" class="form-label">Horário da Consulta</label>
-                        <select id="appointment_time" name="horario" class="form-select" required>
-                            <option value="" disabled selected hidden>Selecione um horário</option>
-                                <option value="07:30">07:30</option>
-                                <option value="14:00">14:00</option>
-                                <option value="17:00">17:00</option>
-                        </select>
-                    </div>
-        
-                    <div class="mb-3 w-100" style="max-width: 15rem;">
-                        <label for="doctor" class="form-label">Doutor</label>
-                        <select id="doctor" name="doutor" class="form-select" required>
-                            <option value="" disabled selected hidden>Selecione um doutor</option>
-                            {% for profissional in profissionais %}
-                                <option value="{{ profissional.name }}">{{ profissional.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-        
                     <button type="submit" class="btn btn-success w-100" style="max-width: 15rem;">Agendar</button>
                 </form>
-            </div>
-        </div>
 
-        <div class="container mt-5">
-            <h2 class="mb-4">Agendamentos</h2>
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Paciente</th>
-                            <th>Idade</th>
-                            <th>Data</th>
-                            <th>Horário</th>
-                            <th>Doutor</th>
-                            <th>Progresso</th>
-                            <th>Valor</th>
-                            <th>Status</th>
-                            <th>Delete</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Está percorrendo os schedulers -->
-                        {% for scheduler in schedulers %}
-                        <tr>
-                            <td>{{ scheduler.name }}</td>
-                            <td>{{ scheduler.age }}</td>
-                            <td>{{ scheduler.date }}</td>
-                            <td>{{ scheduler.hourly }}</td>
-                            <td>{{ scheduler.doctor }}</td>
-                            <td>{{ scheduler.progress }}</td> <!-- Progresso -->
-                            <td>R${{ scheduler.value }}</td> <!-- Valor -->
-                            <td class="{% if scheduler.status == 'pago' %}text-success{% else %}text-danger{% endif %}">
-                                {{ scheduler.status }}
-                            </td>
-                            <td>
-                                <form action="{% url 'delete_schedule' scheduler.id %}" method="POST" class="d-inline">
-                                    {% csrf_token %}
-                                    <button type="submit" class="btn btn-danger btn-sm">Excluir</button>
-                                </form>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
             </div>
         </div>
     </div>
