--- a/app_physiotherapy/templates/users/payment_page.html
+++ b/app_physiotherapy/templates/users/payment_page.html
@@ -35,6 +35,7 @@
                         <th>Valor</th>
                         <th>Status</th>
                         <th>Ação</th>
+                        <th>Cancelar</th>
                     </tr>
                 </thead>
                 {% for scheduler in pending_payments %}
@@ -55,7 +56,18 @@
                             {% csrf_token %}
                             <button type="submit" class="btn btn-success">Marcar como Pago</button>
                         </form>
+                        {% else %}
+                        <form action="{% url 'mark_as_paid' scheduler.id %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-warning" disabled>Aguardando</button>
+                        </form>
                         {% endif %}
+                    </td>
+                    <td>
+                        <form action="{% url 'delete_schedule' scheduler.id %}" method="POST" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger btn-sm">Excluir</button>
+                        </form>
                     </td>
                 </tr>
                 {% endfor %}
